# fetchfile_app

./: .gitlab-ci.yml  Dockerfile  Pipfile  pyproject.toml
.github/workflows/: build.yml
src/: main.py
src/assets/: manifest.json
