[project]
name = "fetchfile"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "FetchFile", email = "you@example.com" }
]
dependencies = [
  "flet==0.28.3",
  "yt-dlp"
]

[tool.flet]
org = "com.fetchfile.me"
product = "FetchFile"
company = "FetchFile"
copyright = "FetchFile (C) 2025"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.10.1"

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
yt-dlp = "*"
