[project]
name = "fetchfile"
version = "2.1.1"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "FetchFile", email = "admin@fetchfile.me" }
]

dependencies = [
  "flet==0.28.3",
  "yt-dlp",
  "pyjnius",
  "aiofiles",
#  "flet-webview==0.1.0",
  "flet-video==0.1.1",
#  "flet-audio==0.1.0",
  
]

[tool.flet]
org = "com.fetchfile"
product = "FetchFile"
company = "FetchFile"
copyright = "FetchFile (C) 2025"

[tool.flet.app]
path = "src"

[tool.flet.splash]
android = true
web = true

[tool.flet.app.startup_screen]
show = true
message = "Starting up the app…"

[tool.flet.app.boot_screen]
show = false
message = "Preparing the app for its first launch…"


[tool.flet.android.permission]
#"android.permission.CAMERA" = true
#"android.permission.ACCESS_FINE_LOCATION" = true
#"android.permission.ACCESS_COARSE_LOCATION" = true
#"android.permission.ACCESS_BACKGROUND_LOCATION" = true
#"android.permission.RECORD_AUDIO" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.READ_EXTERNAL_STORAGE" = true

[tool.flet.android.signing]
key_alias = "/__w/fetchfile_app/fetchfile_app/upload-keystore.jks"


[tool.flet.android]
split_per_abi = true

#signing.key_alias = "./upload-keystore.jks"
#signing.key_alias = "/__w/fetchfile_app/fetchfile_app/upload-keystore.jks"
#dependencies = [
#    "pyjnius"
#]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = true

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.10.1"
media_kit_libs_android_video = "1.3.7"

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
yt-dlp = "*"
